compiler/e2e/test/snapshot/module_tree/redefinition/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: a module with the given name already exists
  ╭─ module_tree/redefinition/main.pnx:2:8
  │
1 │ public module submodule
  │        ---------------- existing module with the same name
2 │ public module submodule:
  │        ^^^^^^^^^^^^^^^^ this module redefines an existing module
  │
  = can not have more than one module with the same name in the same scope

error: Compilation aborted due to 1 error(s)



stdout:
